# dff

./: .gitignore  CMakeLists.txt  dff_utils.cpp  duplicates_scanner.cpp  duplicates_scanner.h  file_utils.cpp  file_utils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
